--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,7 @@ body > div {
   background-color: #275db3;
   color: white;
 }
+.home{
+  background-color:  rgba(58, 114, 112, 0.993);
+  color: white;
+}
